--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "vue": "^2.6.6",
     "vue-color": "^2.7.0",
-    "vue-swatches": "^1.0.3"
+    "vue-swatches": "^1.0.3",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.5.1",
