--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "verte": "0.0.10",
     "vue": "^2.6.6",
-    "vue-color": "^2.7.0",
-    "vue-swatches": "^1.0.3",
     "vuex": "^3.1.0"
   },
   "devDependencies": {
